# qpgi

./: .gitignore  CMakeLists.txt  Makefile  README.md
cmake/: qpgi_add_test.cmake
include/: common.h  constraints_register.h  logger.h  ostream_enum_map.h  solver.h  solver_eqp.h
matlab/: Makefile  make.m  mexopts.sh  qpgi.m  qpgi_interface.cpp  test_interface.m
matlab/matlab_implementation/: README  factorize_solve.m  get_candidate_ctr.m  qpgi_matlab.m
matlab/other_test_problems/: get_obj_val.m  problem_001.m  problem_002.m  problem_003.m  problem_004.m  problem_005.m  problem_006.m  problem_007.m  problem_008.m  problem_009.m  problem_010.m  problem_011.m  problem_012.m  problem_013.m  problem_014.m  problem_1.m  problem_2.m  problem_3.m  problem_4.m  problem_5.m  problem_6.m  problem_7.m  problem_8.m  solve_and_verify.m  test_problem_001.m  test_problem_002.m  test_problem_003.m  test_problem_004.m  test_problem_005.m  test_problem_006.m  test_problem_007.m  test_problem_008.m  test_problem_009.m  test_problem_010.m  test_problem_011.m  test_problem_012.m  test_problem_013.m  test_problem_014.m  test_problem_1.m  test_problem_2.m  (+6 more)
matlab/qpoases_test_problems/: Makefile  qpoases_cpp_get_data.m  qpoases_cpp_get_folders.m  qpoases_cpp_main.m  qpoases_cpp_solve.m  qpoases_matlab_main.m
notes/: CMakeLists.txt  biblio.bib  notes.tex
tests/: CMakeLists.txt  common_boost_utf.h  utf_constraints_register.cpp  utf_solver.cpp
